<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.harvard.hms.dbmi.avillach</groupId>
	<artifactId>pic-sure-api</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>pic-sure-api</name>
	<modules>
		<module>pic-sure-api-war</module>		<!-- the PIC-SURE API itself -->
		<module>pic-sure-api-data</module>		<!-- database related info -->
		<module>pic-sure-resources</module>		<!-- a directory full of PIC-SURE Resource to be accessed via the API -->
		<module>pic-sure-api-wildfly</module>	<!-- fully configured environment for integration testing and development -->
		<module>pic-sure-util</module>			<!-- utility classes/functions for use by API and Resources -->
	</modules>
	<properties>
		<jackson.version>2.9.4</jackson.version>
		<picsure.2.token>eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJmb29AYmFyLmNvbSIsImlzcyI6ImJhciIsImV4cCI6ODY1NTI4Mzk4NTQzLCJpYXQiOjE1Mjg0ODQ5NDMsImp0aSI6IkZvbyIsImVtYWlsIjoiZm9vQGJhci5jb20ifQ.KE2NIfCzQnd_vhykhb0sHdPHEwvy2Wphc4UVsKAVTgM</picsure.2.token>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!--
		*****************************************************************************************
		THIS IS THE ONLY PLACE YOU SHOULD SET CONFIGURATION VARIABLES FOR UNIT/INTEGRATION TESTS!
		*****************************************************************************************
		-->

		<mockito.cfg.base_url>http://localhost:8079</mockito.cfg.base_url>

		<picsure.cfg.endpoint_url>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE</picsure.cfg.endpoint_url>
		<picsure.cfg.client_secret>this_value_does_not_matter_for_testing</picsure.cfg.client_secret>
		<picsure.cfg.user_id_claim>email</picsure.cfg.user_id_claim>
		<picsure.cfg.roles_claim>privileges</picsure.cfg.roles_claim>
		<picsure.cfg.verify_user_method>sessionFilter</picsure.cfg.verify_user_method>
		<picsure.cfg.token_introspection_url>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE/token/inspect</picsure.cfg.token_introspection_url>
		<picsure.cfg.token_introspection_token>this_value_does_not_matter_for_testing</picsure.cfg.token_introspection_token>

		<irct.cfg.result_format>JSON</irct.cfg.result_format>				<!-- RESULT_FORMAT -->
		<irct.cfg.rs_url>http://localhost:8080/pic-sure-irct-resource-${project.version}/pic-sure/v1.4</irct.cfg.rs_url>	<!-- IRCT_RS_URL -->
		<irct.cfg.token>eyJhbGciOiJIUzI1NiJ9.eyJleHAiOjg3OTM1NTE5NjI0LCJzdWIiOiJpbnRlZ3JhdGlvbi50ZXN0QGhtcy5oYXJ2YXJkLmVkdSIsImVtYWlsIjoiaW50ZWdyYXRpb24udGVzdEBobXMuaGFydmFyZC5lZHUiLCJpc3MiOiJiYXIiLCJqdGkiOiJGb28iLCJpYXQiOjE1MzU2MDYwMjR9.RUKkN5_Bsd5MWHhV_YTnotoMqTtrOLszsBTN9FC4n48</irct.cfg.token>

		<gnome.cfg.i2b2_rs_url>http://localhost:8080/pic-sure-gnome-i2b2-count-resource-${project.version}/pic-sure/gnome-i2b2-count</gnome.cfg.i2b2_rs_url> <!-- GNOME_I2B2_RS_URL -->

		<i2b2.cfg.label>Patient Id</i2b2.cfg.label>							<!-- I2B2_LABEL -->

		<aggregate.cfg.rs_url>http://localhost:8080/pic-sure-aggregate-resource-${project.version}/pic-sure/group</aggregate.cfg.rs_url>	<!-- AGGREGATE_RS_URL -->

		<ga4gh.cfg.result_format>JSON</ga4gh.cfg.result_format>

		<!-- are these duplicate definitions? -->
		<picsure.cfg.token>${picsure.2.token}</picsure.cfg.token>			<!-- PICSURE_2_TOKEN -->

	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
						<systemPropertyVariables combine.children="append">
							<!-- THIS IS WHERE VARIABLES USED BY UNIT TESTING (BUT NOT INTEGRATION TESTING) -->
							<mockito_base_url>${mockito.cfg.base_url}</mockito_base_url>
						</systemPropertyVariables>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>0.9.0</version>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>8.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>2.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore</artifactId>
				<version>4.4.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.2</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>com.github.tomakehurst</groupId>
				<artifactId>wiremock-standalone</artifactId>
				<version>2.14.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.glassfish.jersey.core</groupId>
				<artifactId>jersey-common</artifactId>
				<version>2.26</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxb-provider</artifactId>
				<version>3.0.8.Final</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.7</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>2.23.4</version>
				<scope>test</scope>
			</dependency>

            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
            <dependency>
				<groupId>org.hibernate.javax.persistence</groupId>
				<artifactId>hibernate-jpa-2.1-api</artifactId>
				<version>1.0.2.Final</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-annotations</artifactId>
				<version>3.5.6-Final</version>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>org.hibernate.javax.persistence</groupId>
						<artifactId>hibernate-jpa-2.0-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
				<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.25</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>1.7.25</version>
				<scope>test</scope>
			</dependency>

			<!-- https://mvnrepository.com/artifact/log4j/log4j -->
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>3.5.6-Final</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>

	</dependencyManagement>
</project>